{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 98,
  "lineage": "74c38316-fcac-8c30-dcbb-90fac5055b65",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380955945980:vpc/vpc-0aa52f90d7c78b8bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-01437027d426d5169",
            "default_route_table_id": "rtb-0f7b11ce02f38e1be",
            "default_security_group_id": "sg-0e08f0def23244ddd",
            "dhcp_options_id": "dopt-0288af97b7994c0e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aa52f90d7c78b8bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f7b11ce02f38e1be",
            "owner_id": "380955945980",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "load_generator",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0273735cd4c306ac0",
            "arn": "arn:aws:ec2:us-east-1:380955945980:instance/i-008cbcf6898eebd5f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-008cbcf6898eebd5f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.large",
            "ipv6_address_count": 0,
            "key_name": "15619-CC",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03952cdfa833faabb",
            "private_dns": "ip-172-31-31-190.ec2.internal",
            "private_ip": "172.31.31.190",
            "public_dns": "ec2-54-221-64-212.compute-1.amazonaws.com",
            "public_ip": "54.221.64.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fb2bbb535cc9d943",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "terraform-20220207035150322100000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058900e1561fcf46c",
            "tags": {
              "Project": "vm-scaling"
            },
            "tags_all": {
              "Project": "vm-scaling"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02253eb643609b6ae"
            ]
          },
          "dependencies": [
            "aws_security_group.lg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "p1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380955945980:security-group/sg-0eba15b729de96de5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eba15b729de96de5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220207035204209000000002",
            "name_prefix": "terraform-",
            "owner_id": "380955945980",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "vm-scaling"
            },
            "tags_all": {
              "Project": "vm-scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa52f90d7c78b8bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:380955945980:security-group/sg-02253eb643609b6ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02253eb643609b6ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220207035150322100000001",
            "name_prefix": "terraform-",
            "owner_id": "380955945980",
            "revoke_rules_on_delete": false,
            "tags": {
              "Project": "vm-scaling"
            },
            "tags_all": {
              "Project": "vm-scaling"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa52f90d7c78b8bb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}